# rules_rust

./: MODULE.bazel  cargo.html  crate_universe.html  crate_universe_bzlmod.html  crate_universe_workspace.html  index.html  print.html  rust_bzlmod.html  rust_repositories.html  searchindex.js  searchindex.json
examples/crate_universe/vendor_local_manifests/: Cargo.toml
examples/crate_universe/vendor_local_manifests/crates/: BUILD.bazel  defs.bzl
examples/crate_universe/vendor_local_manifests/crates/async-stream-impl-0.3.5/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/equivalent-1.0.2/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/getrandom-0.3.1/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/hashbrown-0.15.2/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/indexmap-2.8.0/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/itoa-1.0.15/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/rustix-1.0.2/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/ryu-1.0.20/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/serde-1.0.219/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/serde_derive-1.0.219/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/serde_yaml-0.9.34-deprecated/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/syn-2.0.55/: BUILD.bazel
examples/crate_universe/vendor_local_manifests/crates/tempfile-3.19.0/: BUILD.bazel
(+42 files in other folders)
